examples/test/testpolicy3696.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy3696
  namespace: namespace447
spec:
  podSelector:
    matchLabels:
      key7: value9
      key28: value10
      key22: value39
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value23
      podSelector:
        matchLabels:
          key12: value1
